solidserver/basicService.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
      alb.ingress.kubernetes.io/target-type: ip
  name: test-service
spec:
  selector:
    app: solidserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
