solidserver/basicIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: solidserver
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme : internet-facing
  labels:
    app: solidserver  
spec:
  rules:
  - host: argo.solidserver.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test-service
              port:
                number: 80
