solidserver/node-solid-server-all-in-one.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: solidserver



---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  name: solidserver
  namespace : solidserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: solidserver-deployment
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: solidserver-deployment

    spec:
      containers:
        - image: solidproject/community-server:latest
          name: solidserver-deployment
          imagePullPolicy: Always
          env :
          - name: CSS_BASE_URL
            value: "k8s-solidser-ingresss-2471e2d536-822943591.eu-west-1.elb.amazonaws.com"
          - name: CSS_SHOW_STACK_TRACE
            value: true  
          ports:
            - containerPort: 3000
          resources: {}
          
status: {}

---


apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  name: service-solidserver
  namespace: solidserver
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: NodePort    
  selector:
    app.kubernetes.io/name: solidserver-deployment


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: solidserver
  name: ingress-solidserver
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  tls:
  - hosts:
    - www.ordinasolid.cloud
    secretName: solidserver-tls
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-solidserver
              port:
                number: 3000

---
