solidserver/solidServer.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: solidserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: solidserver
  name: solidserver-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: solidserver-deployment
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: solidserver-deployment
    spec:
      containers:
      - image: solidproject/community-server:latest
        imagePullPolicy: Always
        name: solidserver-deployment
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: solidserver
  name: service-solidserver
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: solidserver-deployment
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: solidserver
  name: ingress-solidserver
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-solidserver
              port:
                number: 80
